--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3"
 services:
   react-app:
-    image: sekolahdevopscilsy/mern-docker_client
+    image: ./frontend
     stdin_open: true
     ports: 
       - "3000:3000"
-    networks:
-      - mern-app
+
   api-server:
-    image: sekolahdevopscilsy/mern-docker_server
+  build:
+    context: ./backend
     ports:
       - "4000:4000"
     networks:
@@ -16,7 +16,8 @@ services:
     depends_on:
       - mongo
   mongo:
-    image: mongo:3.6.19-xenial
+  build:
+    context: ./mongo
     ports:
       - "27017:27017"
     networks:
