--- a/production/service.yaml
+++ b/production/service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: production
 spec:
   selector:
-    app: todoappr
+    app: todoappr #To-Frontend
   type: ClusterIP
   ports:
     - port: 80
