--- a/stagging/ingress.yaml
+++ b/stagging/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: tdapp.teamtss.xyz
+    - host: tdapp.teamtss.xyz #host route53
       http:
         paths:
           - path: /
